# Dept-Inventory-System

./: .gitignore  README.md
api/: .env  README.md  app.py  asset.py  auth.py  bulk_asset.py  main.py  order.py  pyproject.toml  user.py  warranty.py
api/db/: built_queries.py  connect.py  queries.py  schema.sql  schema_example.sql  simple_queries.sql
api/models/: db.py  email.py  requests.py  responses.py
api/routes/: asset.py  bulk_asset.py  order.py  user.py
api/tests/: test_main.py  test_user.py
api/utils/: auth.py  configs.py  warranty.py
client/: .env  README.md  jsconfig.json  package-lock.json  package.json
client/components/: Asset.js  Barcode.js  Container.js  Dropdown.js  Form.js  Order.js  Table.js  User.js  UserNav.js
client/components/Admin/: AdminNav.js  User.js
client/components/Navbars/: AdminNav.js  DisplayNav.js  UserNav.js
client/components/User/: Asset.js  AssetDetails.js  BulkAsset.js  Order.js
client/components/layouts/: footer.js  index.js  nav.js
client/pages/: _app.js  about.js  account.js  admin.js  index.js  login.js  profile.js  user.js
client/pages/api/auth/: [...nextauth].js
