[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Umesh Kalvakuntla <umeshkalvakuntla26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
PyPika = "^0.48.9"
psycopg2 = "^2.9.6"
schedule = "^1.2.0"
google-api-python-client = "^2.86.0"
fastapi-mail = "^1.2.8"
pytest = "^7.3.1"
poetry-dotenv-plugin = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
